--- a/pgadmin3.desktop
+++ b/pgadmin3.desktop
@@ -3,10 +3,9 @@ Name=pgAdmin III
 Comment=PostgreSQL frontend
 Comment[pl]=Narzêdzie do PostgreSQL
 Exec=pgadmin3
-Icon=pgadmin3.xpm
+Icon=pgadmin3
 Terminal=false
 Type=Application
 Categories=Office;Database;
-Encoding=UTF-8
 DocPath=/usr/share/pgadmin3/docs/en_US/index.html
 # vi: encoding=utf-8
