- rel 2 - fixed desktop categories
Changed files:
    pgadmin3.desktop -> 1.3
    pgadmin3.spec -> 1.44

--- a/pgadmin3.desktop
+++ b/pgadmin3.desktop
@@ -6,6 +6,6 @@ Exec=pgadmin3
 Icon=pgadmin3
 Terminal=false
 Type=Application
-Categories=Office;Database;
+Categories=Database;System;
 DocPath=/usr/share/pgadmin3/docs/en_US/index.html
 # vi: encoding=utf-8
